# screen-streamer

./: .gitignore  CMakeLists.txt  README.md
Application/: CMakeLists.txt  main.qml  resources.qrc
Application/src/: main.cpp
ScreenStreamer/: CMakeLists.txt  main.cpp
streamers/: CMakeLists.txt  CameraStreamerClient.py  camera-streamer-client.cpp  camera-streamer-server.cpp  tracker-client.py
